2005-01-18  David Bateman <dbateman@free.fr>

	* Array.cc (Array<T>::insert (const Array<T>&, const Array<int>&)):
	Modify calculation of number elements to skip between copied blocks.

2005-01-18  John W. Eaton  <jwe@octave.org>

	* idx-vector.cc (IDX_VEC_REP::freeze): Call warning handler, not
	error handler, to warn about resizing.

2004-12-27  Martin Dalecki  <martin@dalecki.de>

	* Array.cc, ArrayN.cc, base-lu.cc, boolMatrix.cc, boolNDArray.cc,
	Bounds.cc, CColVector.cc, CDiagMatrix.cc, chMatrix.cc,
	chNDArray.cc, CMatrix.cc, CmplxAEPBAL.cc, CmplxCHOL.cc,
	CmplxDET.cc, CmplxHESS.cc, CmplxLU.cc, CmplxQR.cc, CmplxQRP.cc,
	CmplxSCHUR.cc, CmplxSVD.cc, CNDArray.cc, CollocWt.cc,
	CRowVector.cc, DASPK.cc, DASRT.cc, DASSL.cc, dbleAEPBAL.cc,
	dbleCHOL.cc, dbleDET.cc, dbleHESS.cc, dbleLU.cc, dbleQR.cc,
	dbleQRP.cc, dbleSCHUR.cc, dbleSVD.cc, dColVector.cc,
	dDiagMatrix.cc, DiagArray2.cc, dMatrix.cc, dNDArray.cc,
	dRowVector.cc, EIG.cc, FEGrid.cc, idx-vector.cc, int16NDArray.cc,
	int32NDArray.cc, int64NDArray.cc, int8NDArray.cc, intNDArray.cc,
	LinConst.cc, LPsolve.cc, LSODE.cc, MArray2.cc, MArray.cc,
	MArrayN.cc, MDiagArray2.cc, NLEqn.cc, oct-alloc.cc, ODES.cc,
	ODESSA.cc, Quad.cc, Range.cc, so-array.cc, uint16NDArray.cc,
	uint32NDArray.cc, uint64NDArray.cc, uint8NDArray.cc:
	Delete #pragma implementation.

	* Array2.h, Array3.h, Array.h, ArrayN.h, base-lu.h, boolMatrix.h,
	boolNDArray.h, Bounds.h, CColVector.h, CDiagMatrix.h, chMatrix.h,
	chNDArray.h, CMatrix.h, CmplxAEPBAL.h, CmplxCHOL.h, CmplxDET.h,
	CmplxHESS.h, CmplxLU.h, CmplxQR.h, CmplxQRP.h, CmplxSCHUR.h,
	CmplxSVD.h, CNDArray.h, CollocWt.h, CRowVector.h, DASPK.h,
	DASRT.h, DASSL.h, dbleAEPBAL.h, dbleCHOL.h, dbleDET.h, dbleHESS.h,
	dbleLU.h, dbleQR.h, dbleQRP.h, dbleSCHUR.h, dbleSVD.h,
	dColVector.h, dDiagMatrix.h, DiagArray2.h, dim-vector.h,
	dMatrix.h, dNDArray.h, dRowVector.h, EIG.h, FEGrid.h,
	idx-vector.h, int16NDArray.h, int32NDArray.h, int64NDArray.h,